# SaaS-Churn-Survival

./: .env.example  .gitignore  LICENSE  README (for self-explanation).md  README.md  api.py  dashboard.py  evaluate.py  evaluate_model.py  pyproject.toml  requirements.txt  train.py  train_model.py  visual_analysis.py
.devcontainer/: devcontainer.json
data/raw/: test_.csv  train.csv
models/: churn_logistic.pkl  churn_xgboost.pkl  cox_ph.pkl  feature_engineer.pkl  model_metadata.json
src/: __init__.py  config.py  data_loader.py  feature_engineering.py  models.py  survival.py  utils.py
tests/: __init__.py  test_pipeline.py  testpipeline.py
